<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:background="#ff000000"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="150dip"
            android:layout_height="0dip"
            android:layout_marginTop="50dip"
            android:src="@mipmap/ic_launcher"
            android:layout_weight="1" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_weight="2">
            <TextView
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:text="@string/app_name" />
            <TextView
                android:textSize="16dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/app_description" />
            <TextView
                android:textSize="16dp"
                android:autoLink="email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/help_instructions" />
            <TextView
                android:textSize="16dp"
                android:autoLink="web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="http://reenact.me/" />
            <TextView
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/twitter_handle"
                android:onClick="openTwitter" />
        </LinearLayout>
    </LinearLayout>
    <ImageButton
        android:background="#00000000"
        android:layout_width="40dip"
        android:layout_height="40dip"
        android:layout_marginTop="20dip"
        android:layout_marginRight="20dip"
        android:src="@drawable/ic_action_navigation_close"
        android:scaleType="fitCenter"
        android:layout_alignParentRight="true"
        android:onClick="close" />
</RelativeLayout>