<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#00c755"
    android:onClick="choosePhoto"
    tools:context="com.chrisfinke.reenact.IntroActivity"
    >
    <LinearLayout
        android:id="@+id/intro_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:gravity="center"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:text="@string/choose_photo_label"
                android:textColor="#fff"
                android:background="#000"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_weight="0.5"
                android:textAllCaps="true"
                android:clickable="false"
                />
        </RelativeLayout>
    </LinearLayout>
    <ImageButton
        android:background="#00000000"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_action_action_help"
        android:scaleType="fitCenter"
        android:layout_alignParentRight="true"
        android:onClick="showHelp"
        android:alpha="0.75" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/help">
        <LinearLayout
            android:orientation="vertical"
            android:background="#ff000000"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="150dip"
                android:layout_height="0dip"
                android:src="@drawable/logo"
                android:layout_weight="1"
                android:layout_margin="20dp"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_margin="20dp"
                android:layout_weight="2">
                <TextView
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dip"
                    android:text="@string/app_name" />
                <TextView
                    android:textSize="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/app_description" />
                <TextView
                    android:textSize="16dp"
                    android:autoLink="email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/help_instructions" />
                <TextView
                    android:textSize="16dp"
                    android:autoLink="web"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="http://reenact.me/" />
                <TextView
                    android:textSize="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/twitter_handle"
                    android:onClick="openTwitter" />
            </LinearLayout>
        </LinearLayout>
        <ImageButton
            android:background="#00000000"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_marginTop="20dip"
            android:layout_marginRight="20dip"
            android:src="@drawable/ic_action_navigation_close"
            android:scaleType="fitCenter"
            android:layout_alignParentRight="true"
            android:onClick="hideHelp" />
    </RelativeLayout>
</RelativeLayout>